; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_licence.c_licence_parse_authreq.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_licence.c_licence_parse_authreq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LICENCE_TOKEN_SIZE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"token len %d\0A\00", align 1
@False = common dso_local global i32 0, align 4
@LICENCE_SIGNATURE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32**, i32**)* @licence_parse_authreq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @licence_parse_authreq(i32 %0, i32** %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32** %1, i32*** %6, align 8
  store i32** %2, i32*** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @in_uint8s(i32 %9, i32 6)
  %11 = load i32, i32* %5, align 4
  %12 = load i64, i64* %8, align 8
  %13 = call i32 @in_uint16_le(i32 %11, i64 %12)
  %14 = load i64, i64* %8, align 8
  %15 = load i64, i64* @LICENCE_TOKEN_SIZE, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = load i64, i64* %8, align 8
  %19 = call i32 @error(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i64 %18)
  %20 = load i32, i32* @False, align 4
  store i32 %20, i32* %4, align 4
  br label %34

21:                                               ; preds = %3
  %22 = load i32, i32* %5, align 4
  %23 = load i32**, i32*** %6, align 8
  %24 = load i32*, i32** %23, align 8
  %25 = load i64, i64* %8, align 8
  %26 = call i32 @in_uint8p(i32 %22, i32* %24, i64 %25)
  %27 = load i32, i32* %5, align 4
  %28 = load i32**, i32*** %7, align 8
  %29 = load i32*, i32** %28, align 8
  %30 = load i64, i64* @LICENCE_SIGNATURE_SIZE, align 8
  %31 = call i32 @in_uint8p(i32 %27, i32* %29, i64 %30)
  %32 = load i32, i32* %5, align 4
  %33 = call i32 @s_check_end(i32 %32)
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %21, %17
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @in_uint8s(i32, i32) #1

declare dso_local i32 @in_uint16_le(i32, i64) #1

declare dso_local i32 @error(i8*, i64) #1

declare dso_local i32 @in_uint8p(i32, i32*, i64) #1

declare dso_local i32 @s_check_end(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
